--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image:'imagen\back.jpg';
+    background-color: rgb(211, 184, 127);
     font-family: arial;
     font-size: 1.2em;
 }
@@ -17,9 +17,13 @@ nav a {
 form > div {
     margin: 20px 10px;
 }
+form{
+    margin-left: 500px;
+}
 h2{
-    color: rgb(156, 33, 33);
-    text-shadow: 3px 3px 3px black;
+    color: rgb(165, 36, 36);
+    text-shadow: 3px 3px 3px rgb(68, 61, 61);
+    text-align: center;
 }
 td{
     color: white;
@@ -29,7 +33,7 @@ td{
     background-color: cornsilk;
 }
 #titulo{
-    background-color: rgb(62, 59, 221);
+    background-color: rgb(189, 138, 27);
 }
 #comando{
     text-align: center;
@@ -37,9 +41,9 @@ td{
 }
 #secciones{
     background-color: darkgrey;
-    width: auto;
-    margin: auto;
-    border:3px solid #333333;
+    width: 700px;
+    margin-left: 400px;
+    border:3px solid #706f6f;
 }
 #mostrar {
     border-radius: 100px;
