--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ h2{
     text-align: center;
 }
 td{
-    color: white;
-    text-shadow: 5px 5px 5px black;
+    color: rgb(243, 243, 243);
 }
 #cabecera{
     background-color: cornsilk;
