--- a/style.css
+++ b/style.css
@@ -51,3 +51,19 @@ td{
     width:20px; 
     height:20px;
 }
+#tabla{
+     width:800px; 
+     float: left;
+ }
+#ilustraciones{
+    display: flex;
+    flex-direction: column;
+    float: right;
+    margin-left: 300px;
+    clear: both;
+}
+ img{
+    width:200px; 
+    height:200px;
+ }
+ 
