--- a/style.css
+++ b/style.css
@@ -17,9 +17,7 @@ nav a {
 form > div {
     margin: 20px 10px;
 }
-form{
-    margin-left: 500px;
-}
+
 h2{
     color: rgb(165, 36, 36);
     text-shadow: 3px 3px 3px rgb(68, 61, 61);
@@ -52,14 +50,22 @@ td{
     height:20px;
 }
 #tabla{
-     width:800px; 
-     float: left;
+     width:1200px; 
+     float: left;   
+ }
+ table {
+    width: 100%;
+    word-wrap: break-word;
+ }
+ td {
+    text-align: left;
+    vertical-align: top;
+    padding:  15px 15px 15px 15px;
  }
 #ilustraciones{
     display: flex;
     flex-direction: column;
     float: right;
-    margin-left: 300px;
     clear: both;
 }
  img{
